@@ -4,6 +4,7 @@
 
 == Contributors
 
+- concept47 (https://github.com/concept47) every and :discard_past
 - Chris Kampemeier (http://github.com/chrisk) rspec 2.0 refinements
 - Tanzeeb Khalili (http://github.com/tanzeeb) cron and timezones
 - Adam Davies (http://github.com/adz), @allow_overlap = false
