@@ -106,7 +106,7 @@ describe "#{SCHEDULER_CLASS}#every" do
     counter.should == 2
   end
 
-  it 'ignores :first_at if it is in the past' do
+  it 'triggers for the missed schedules when :first_at is in the past' do
 
     counter = 0
 
@@ -114,8 +114,20 @@ describe "#{SCHEDULER_CLASS}#every" do
       counter += 1
     end
 
-    sleep 1.1
-    counter.should == 1
+    wait_next_tick
+    counter.should == 3
+  end
+
+  it 'does not trigger for the missed schedules when :first_at is in the past and :discard_past => true' do
+
+    counter = 0
+
+    @s.every '1s', :first_at => Time.now - 2, :discard_past => true do
+      counter += 1
+    end
+
+    wait_next_tick
+    counter.should == 0
   end
 
   it 'honours :first_in' do
